--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,9 @@ body {
         width: 100vw;
         height: 100vh;
     }
+    .text-bg{
+        display: none;
+    }
     .form {
         background-color: #dbcecec5;
         border-radius: 10px;
