--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     --inputcolorbg: hsla(23, 10%, 74%, 0.897);
     --btn-hover-color-bg: #333E48;
     --cor03: #ffffff;
+    --cor04: #000000;
 
 
 }
